ecmascript/parser/tests/test262-error-references/fail/4e880c0482d146e0.js.stderr
error: 'import', and 'export' cannot be used outside of module code
 --> $DIR/tests/test262-parser/fail/4e880c0482d146e0.js:1:1
  |
1 | import foo from bar
  | ^^^^^^

